fix(wearable): Bottom button has wrong size
Issue: OAPWAF-1707

--- a/tau/demos/SDK/wearable/UIComponents/css/style-circle.css
+++ b/tau/demos/SDK/wearable/UIComponents/css/style-circle.css
@@ -1045,17 +1045,6 @@ input[type="checkbox"]#checkboxControl {
 	transform: translate(0, -70%);
 }
 
-/* -------------Marquee-----------*/
-.ui-btn#start {
-	padding-left: 20%;
-	padding-right: 0;
-}
-
-.ui-btn#reset {
-	padding-right: 20%;
-	padding-left: 0;
-}
-
 /* -------------Rotary Event-----------*/
 #pageRotaryEvent::after {
 	content: none;
